src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AKA__c</fullName>
        <label>AKA</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <picklist>
            <picklistValues>
                <fullName>Prison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education - school etc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Reference_Creator__c</fullName>
        <description>This auto number field is used to generate the account reference</description>
        <displayFormat>{000000}</displayFormat>
        <label>Account Reference Creator</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Reference__c</fullName>
        <description>This field create a unique account ID by concatenating first three letters of the account name and the auto created unique reference creator, unless the legacy unique ID field is populated in which case it uses that value. Updated via workflow</description>
        <inlineHelpText>This is the unique reference number asscoiated to this account</inlineHelpText>
        <label>Account Reference</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Revenue_Band__c</fullName>
        <description>Sets Account Revenue Band to Micro, Small Med or large dependent upon annual revenue</description>
        <formula>IF (ISBLANK(AnnualRevenue),
&quot;Unknown&quot;,
IF (AnnualRevenue &lt; 2000000, 
&quot;Micro&quot;, 
IF (AnnualRevenue &lt; 6500000, 
&quot;Small&quot;, 
IF (AnnualRevenue &lt; 30000000, 
&quot;Medium&quot;, 
&quot;Large&quot;))))</formula>
        <label>Account Revenue Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_owner_correct__c</fullName>
        <description>On resolution of acount assignment rules we asked salespeople to check results.</description>
        <inlineHelpText>Please check owner of account is correct.  Ensure postcode and employee count are also correct.</inlineHelpText>
        <label>Account owner correct</label>
        <picklist>
            <picklistValues>
                <fullName>Okay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Accounts_Dept_Phone__c</fullName>
        <description>For Finance</description>
        <inlineHelpText>Usually the Billing Address Accounts Department main phone.</inlineHelpText>
        <label>Accounts Dept Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Account is Active or Inactive i.e. does the Organisation exist.</description>
        <inlineHelpText>Indicates whether the Account is Active or Inactive i.e. does the Organisation exist.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Combined__c</fullName>
        <description>Combines principle address fields into one string</description>
        <formula>IF(ISBLANK(Principle_Address_Building__c),&quot;&quot;,Principle_Address_Building__c &amp; BR()) +
IF(ISBLANK(Principle_Address_Street__c),&quot;&quot;,Principle_Address_Street__c &amp; BR()) +
IF(ISBLANK(Principle_Address_Area__c),&quot;&quot;,Principle_Address_Area__c &amp; BR()) +
IF(ISBLANK(Principle_Address_City__c),&quot;&quot;,Principle_Address_City__c &amp; BR()) +
IF(ISBLANK(Principle_Address_State_Province__c ),&quot;&quot;,Principle_Address_State_Province__c  &amp; BR()) +
IF(ISBLANK( Principle_Address_ZIP_Postal_Code__c),&quot;&quot;, Principle_Address_ZIP_Postal_Code__c  &amp; BR()) +
IF(ISPICKVAL(Principle_Address_Country__c, &quot;--none--&quot;),&quot;&quot;,TEXT(Principle_Address_Country__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Address has been validated by Postcode Anywhere - this can be used in validation rules to drive address validation OR data management processes</description>
        <inlineHelpText>Address has been validated by Postcode Anywhere</inlineHelpText>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_Account_Name__c</fullName>
        <description>Alternate Name of Account used by Finance</description>
        <label>Alternate Account Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Supplier__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether account is an approved supplier.</description>
        <inlineHelpText>Confirms supplier approval based on H&amp;S, Quality and Finance (entered by the Standards Manager).</inlineHelpText>
        <label>Approved Supplier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area</label>
        <referenceTo>Area__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Delivery_Method__c</fullName>
        <description>How the invoices will be delivered for auto invoicing.</description>
        <inlineHelpText>This defines how invoices and credit notes will be sent using the auto invoicing process.
Auto delivery can be switched off at individual opportunity level</inlineHelpText>
        <label>Auto Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_Address_Combined__c</fullName>
        <description>This is used for the Invoice/Proforma template</description>
        <formula>IF(ISBLANK(BillingStreet), &quot;&quot;,BillingStreet+ BR() ) +
IF(ISBLANK(BillingCity), &quot;&quot;,BillingCity+ BR() ) +
IF(ISBLANK(BillingState), &quot;&quot;,BillingState+ BR() ) +
IF(ISBLANK(BillingPostalCode), &quot;&quot;,BillingPostalCode+ BR() )+
IF(BillingCountry=&quot;United Kingdom&quot;, &quot;&quot;,
IF(BillingCountry=&quot;UK&quot;,&quot;&quot;,BillingCountry))</formula>
        <label>Billing Address Combined</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Authority_Level__c</fullName>
        <label>Budget Authority Level</label>
        <picklist>
            <picklistValues>
                <fullName>Decentralised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centralised</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Most Decentralised</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CB_TEMP_Supplier__c</fullName>
        <inlineHelpText>TEMP field for updating suppliers</inlineHelpText>
        <label>CB TEMP Supplier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centre_Approval_Status__c</fullName>
        <description>To show the current status of the organisation’s approval to become an approved centre – managed by the Qualifications Compliance Manager</description>
        <inlineHelpText>Select the current status of the organisation’s approval to become an approved centre – managed by the Qualifications Compliance Manager</inlineHelpText>
        <label>Centre Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Under Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Additional Information</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centre_Ranking_Status__c</fullName>
        <description>Centre Ranking Status</description>
        <inlineHelpText>Centre Ranking Status</inlineHelpText>
        <label>Centre Ranking Status</label>
        <picklist>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Centre_Type__c</fullName>
        <description>Determines the type of centre registered to deliver qualifications</description>
        <inlineHelpText>Enter the type of Centre if this account is an RCP subscriber</inlineHelpText>
        <label>Centre Type</label>
        <picklist>
            <picklistValues>
                <fullName>01 - School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02 - Further education college / Tertiary college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03 - Sixth form college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 - Adult education centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 - University or 13 - Other higher education centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 - Private training provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 - Local government/ central government/ NHS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 - Voluntary organisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 - Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 - HM Prison/ youth offenders institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11 - Armed forces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13 - Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Company_Reg_Number__c</fullName>
        <description>Company Reg. Number.</description>
        <inlineHelpText>Company Reg. Number.</inlineHelpText>
        <label>Company Reg Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correspondence_Name__c</fullName>
        <description>We have updated the acount name field to include the principle address postcode to allow easy recognistion.  This filed will be used for any correspondence to the customer.</description>
        <inlineHelpText>Enter the client&apos;s name as you would want it to appear on correspondence</inlineHelpText>
        <label>Correspondence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Check_Last_Updated_By__c</fullName>
        <description>Auto populated with person that last updated Data Check value</description>
        <inlineHelpText>Auto populated with person that last updated Data Check value</inlineHelpText>
        <label>Account Data Check Last Updated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Check_Last_Updated__c</fullName>
        <description>Populated buy workflow when the Data Check Result was last changed</description>
        <inlineHelpText>Auto populates date when the Data check result value is changed</inlineHelpText>
        <label>Account Data Check Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Check__c</fullName>
        <description>Holds result of data check</description>
        <inlineHelpText>Please select a value to describe the result of the data check for this record</inlineHelpText>
        <label>Account Data Check</label>
        <picklist>
            <picklistValues>
                <fullName>Record updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No update required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner incorrect prevented update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Could not make contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Data_Cleanse_10__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Parent Account</description>
        <inlineHelpText>Parent Account</inlineHelpText>
        <label>Data Cleanse 10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Cleanse_11__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ultimate Parent</description>
        <inlineHelpText>Ultimate Parent</inlineHelpText>
        <label>Data Cleanse 11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Cleanse_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Accounts / Contacts with no associated records and last contact was created over two years ago</description>
        <inlineHelpText>Accounts / Contacts with no associated records and last contact was created over two years ago</inlineHelpText>
        <label>Data Cleanse 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <description>Describes data quality based on Data_Quality_Score and missing information</description>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <description>Describes data quality score based on account fields</description>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Qual_Approval_Rejected__c</fullName>
        <description>Date Centre was rejected for qualification approval - Auto popuated by Workflow</description>
        <inlineHelpText>Date Centre was rejected for qualification approval - Auto popuated by Workflow</inlineHelpText>
        <label>Date Qual Approval Rejected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qual_Approval_Submitted__c</fullName>
        <description>Date centre entered qualification approval process - Auto populated by workflow</description>
        <inlineHelpText>Date centre entered qualification approval process - Auto populated by workflow</inlineHelpText>
        <label>Date Qual Approval Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qual_Approved__c</fullName>
        <description>Date centre qualification agreement was approved - auto populated  by workflow</description>
        <inlineHelpText>Date centre qualification agreement was approved - auto populated  by workflow</inlineHelpText>
        <label>Date Qual Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Since_Activity__c</fullName>
        <formula>TODAY() - LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom Formula Field that calculates the days since the Last Activity Date</inlineHelpText>
        <label>Days Since Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DedupeText__c</fullName>
        <description>This field concatenates account name and postcode for Account duplicate report</description>
        <formula>Trim(Name) &amp; Trim(Principle_Address_ZIP_Postal_Code__c)</formula>
        <inlineHelpText>Formula concatenates name and postcode</inlineHelpText>
        <label>DedupeText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Accept_Emailed_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For finance to tick if the invoice should not be emailed.</description>
        <inlineHelpText>For finance to tick if the invoice should not be emailed.</inlineHelpText>
        <label>Do Not Accept Emailed Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account level do not call</description>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duplicate_record__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Tick this field if this account is a duplicate</inlineHelpText>
        <label>Duplicate record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_Delivery_Subscriber__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The account has an active eDelivery subscription.</inlineHelpText>
        <label>E-Delivery Subscriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account level email opt out</description>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Site_Band__c</fullName>
        <description>Defines employee site band based on the number of employees</description>
        <formula>IF(
ISBLANK(NumberOfEmployees),
&quot;Unknown&quot;,
IF( 
NumberOfEmployees &lt; 10,&quot;Micro&quot;, 
IF( 
NumberOfEmployees &lt; 50, &quot;Small&quot;, 
IF( 
NumberOfEmployees &lt; 250, &quot;Medium&quot;, 
&quot;Large&quot;
) 
)
)
)</formula>
        <label>Employee Site Band</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employees_Group__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Employees (Group)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Employers_Liability_Insurance_Exp_Date__c</fullName>
        <inlineHelpText>Supplier&apos;s Employers Liability Insurance Expiry Date (entered by the Standards Manager).</inlineHelpText>
        <label>Employers Liability Insurance Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Enterprise_LMS_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether the account is a E Learning Customer</description>
        <inlineHelpText>Tick this box if this account has an e-learning contract, whether active or not</inlineHelpText>
        <label>Enterprise LMS Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_LMS_Documentation_Attached__c</fullName>
        <description>Temp Field. Denotes whether an E Learning contract or cancellation notice ia attached to this account</description>
        <inlineHelpText>Tick this box if there is an E Learning contract or cancellation notice attached to this account</inlineHelpText>
        <label>Enterprise LMS Documentation Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Attached</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_LMS_Hosted_Model__c</fullName>
        <description>Describes how the E-Learning solution is hosted</description>
        <inlineHelpText>Please select the E-Learning hosting arrangements for this Account</inlineHelpText>
        <label>Enterprise LMS Hosted Model</label>
        <picklist>
            <picklistValues>
                <fullName>BSC Hosted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Hosted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_LMS_Migrated_To_New_Platform__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies the Account has migrated its E-Learning hosted solution to the new Moodle platform</description>
        <inlineHelpText>Tick this box If this Account has migrated its E-Learning hosted solution to the new Moodle platform</inlineHelpText>
        <label>Enterprise LMS Migrated To New Platform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_LMS_Subscription_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp field for data cleansing.  Denotes if the E Learning contract is currently active.  This field will be deleted when E-Learning renewals are automated in Salesforce</description>
        <inlineHelpText>Tick this box of the Account has at least one active E Learning subscription</inlineHelpText>
        <label>Enterprise LMS Subscription Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enterprise_LMS_Website__c</fullName>
        <description>Website address for E-Learning website</description>
        <inlineHelpText>Enter E Learning website adddress</inlineHelpText>
        <label>Enterprise LMS Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to exclude Accounts from assignment</description>
        <inlineHelpText>Tick this box if you want it to not be automatically assigned based on postcode / country</inlineHelpText>
        <label>Exclude from Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_Auto_Invoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If you do not want an invoice or credit note automatically created for this Account check this box</description>
        <inlineHelpText>If you do not want an invoice or credit note automatically created for this Account check this box</inlineHelpText>
        <label>Exclude from Auto Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tick if the supplier account is for expenses only</description>
        <inlineHelpText>Tick if the supplier account is for expenses only</inlineHelpText>
        <label>Expenses?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account level fax opt out</description>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Notes__c</fullName>
        <description>Notes pertaining to particular financial requirements associated to this account</description>
        <inlineHelpText>Notes pertaining to particular financial requirements associated to this account</inlineHelpText>
        <label>Financial Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flagged_for_data_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies records which have been flagged for manual data check</description>
        <inlineHelpText>If checked please check data on this account and contacts associated to it</inlineHelpText>
        <label>Flagged For Data Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Force_IDG_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TIck this box to add this record to the overnight data enhancement job.  Will only be included if the IDG Verified box is unchecked.</description>
        <inlineHelpText>TIck this box to add this record to the overnight data enhancement job.  Will only be included if the IDG Verified box is unchecked.</inlineHelpText>
        <label>Force IDG Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Link__c</fullName>
        <description>Create a link using Google Maps</description>
        <formula>&quot;http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=&quot; &amp;
IF(NOT(ISNULL(BillingStreet)), BillingStreet &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCity)), BillingCity &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingState)), BillingState &amp; &quot;,&quot; , &quot;&quot;) &amp;
IF(NOT(ISNULL(BillingCountry)), BillingCountry &amp; &quot;,&quot; , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Google Maps Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Formula__c</fullName>
        <description>Sets group of RAM or KAM based upon employee numbers and rerecord type.  Field informs account owner calculations</description>
        <formula>IF(
	ISBLANK( Ultimate_Parent__c ),
	IF(	
		RecordTypeId=&quot;012D0000000JBKb&quot;,
		&quot;PD&quot;,
		IF(	
			OR( Employees_Group__c  &lt; 50, 
			ISBLANK( Employees_Group__c )),
			&apos;RAM&apos;,
			IF(
				 Employees_Group__c  &lt; 2000, 
				&apos;RAM&apos;,
				&apos;KAM&apos;
				))),
	IF(
		RecordTypeId=&quot;012D0000000JBKb&quot;,
		&quot;PD-Child&quot;,
		IF(
			OR( Ultimate_Parent__r.Employees_Group__c   &lt; 50,
			ISBLANK( Ultimate_Parent__r.Employees_Group__c )),
			&apos;RAM-Child&apos;,
			IF(
				Ultimate_Parent__r.Employees_Group__c  &lt; 2000,
				&apos;RAM-Child&apos;,
				&apos;KAM-Child&apos;
))))</formula>
        <label>Group Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Migrated__c</fullName>
        <description>This is mapped from Organisation.ORG_AREA in the source database. This is a temporary field to validate the implementation of the Territory assignments has assigned the Account to the correct area</description>
        <label>Group Migrated</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>This field will be populated by the Account Assignment rules with AE, RAM, or KAM.</description>
        <inlineHelpText>Auto-populated by Account assignment Rules</inlineHelpText>
        <label>Group</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Head_Of_Center_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Head of Center associated to this qualification center</description>
        <inlineHelpText>Head of Center associated to this qualification center</inlineHelpText>
        <label>Head Of Center Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Head Of Center Contact)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Employees__c</fullName>
        <inlineHelpText>Number of employees in this and child accounts (updates automatically)</inlineHelpText>
        <label>Hierarchy Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <formula>IF ( 
ParentId = &quot;&quot;,0,
(IF( AND (NOT( ParentId=&quot;&quot;),Ultimate_Parent__c=&quot;&quot;),0,
(IF( ParentId = Ultimate_Parent__c ,1,
(IF(  Parent.ParentId = Ultimate_Parent__c ,2,
(IF(  Parent.Parent.ParentId = Ultimate_Parent__c ,3,
(IF(  Parent.Parent.Parent.ParentId = Ultimate_Parent__c ,4,
(IF(  Parent.Parent.Parent.Parent.ParentId = Ultimate_Parent__c ,5,
(IF(  Parent.Parent.Parent.Parent.Parent.ParentId = Ultimate_Parent__c ,6,
7)))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hierarchy Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IDG_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that this account has been verified by IDG and had address and demographic data updated</description>
        <inlineHelpText>When ticked, this account has been verified by IDG and had address and demographic data updated.</inlineHelpText>
        <label>IDG Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISA_2012__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Applied for ISA 2012 - Temporary field only, delete at the end of May 2012 when the ISA has happened!</description>
        <inlineHelpText>Applied for ISA 2012</inlineHelpText>
        <label>ISA 2012</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry_Description_long__c</fullName>
        <description>Full industry description - not visible front end</description>
        <label>Industry Description long</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_Description_short__c</fullName>
        <label>Industry Group Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry_SIC__c</fullName>
        <label>Industry SIC</label>
        <length>28</length>
        <type>Text</type>
    </fields>
</CustomObject>